--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,69 @@
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# macOS folder attributes
+*.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
+# macOS metadata files
+*.AppleDouble
+.LSOverride
+
+# macOS resource fork files
+._*
+
+# macOS Quick Look files
+*.qlgenerator
+
+# macOS Finder tags
+*.tag
+
+# macOS temporary files
+.TemporaryItems
+.TemporaryItems/*
+.apdisk
+
+# VSCode
+.vscode/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Logs
+logs
+*.log
+
+# Environment files
+.env
+.env.*
+
+# Build output
+/dist/
+/build/
+
+# IDEs
+.idea/
+*.sublime-workspace
+*.sublime-project
+*.code-workspace
+
+# Other
 /origin
