--- a/.gitignore
+++ b/.gitignore
@@ -1,69 +1,57 @@
-# macOS system files
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear on external disks
-.Spotlight-V100
-.Trashes
-
-# macOS folder attributes
-*.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-
-# macOS metadata files
-*.AppleDouble
-.LSOverride
-
-# macOS resource fork files
-._*
-
-# macOS Quick Look files
-*.qlgenerator
-
-# macOS Finder tags
-*.tag
-
-# macOS temporary files
-.TemporaryItems
-.TemporaryItems/*
-.apdisk
-
-# VSCode
-.vscode/
-
-# Node.js
+# Dependencies
 node_modules/
+origin/
+
+# Build output
+dist/
+
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Logs
-logs
-*.log
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Environment files
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
 .env
-.env.*
 
-# Build output
-/dist/
-/build/
-
-# IDEs
+# IDE files
+.vscode/
 .idea/
-*.sublime-workspace
-*.sublime-project
-*.code-workspace
+*.swp
+*.swo
 
-# Other
-/origin
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
