--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "clean": "gulp clean"
   },
   "devDependencies": {
+    "del": "^6.1.1",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-clean": "^0.4.0",
-    "del": "^6.1.1",
-    "through2": "^4.0.2",
-    "html-minifier": "^4.0.0"
+    "gulp-uglify": "^3.0.2",
+    "html-minifier": "^4.0.0",
+    "through2": "^4.0.2"
   }
 }
